# owll

./: .gitignore  CHANGELOG.md  LICENSE  README.md  eval.py  level.py  main.py  prefix.json  pyproject.toml  requirements.txt
cogs/: admin.py  dot.py  econ.py  fun.py  idk.py  memes.py  music.py
not used/: eval_alsonotworking.py  eval_notworking.py  old_eval.py
not used/Audio/: Audio.db  settings.json
