[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Mr.Owllers", "Erdii", "Sparkz"]
description = "it's alive"
name = "repl_python3_alive"
version = "v1.0.5.5"
[tool.poetry.dependencies]
Flask = "^2.0.1"
PyNaCl = "^1.4.0"
aiohttp = "^3.7.4.post0"
discord = "^1.7.3"
nextcord = "^2.0.0-alpha.3"
pafy = "^0.5.5"
pip = "^21.3.1"
praw = "^7.4.0"
python = "^3.8"
python-dotenv = "^0.19.0"
youtube_dl = "^2021.6.6"
[tool.poetry.dev-dependencies]
